[package]
name = "rdkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async_rotation = []

[dependencies]
config = "0.13.1"
futures = "0.3.21"
log = "0.4.16"
log4rs = "1.1.1"
memmap = "0.7.0"
parking_lot = "0.12.0"
serde = "1.0.136"
serde_json = "1.0"
tokio = {version = "1.17.0", features = ["full"]}

[dependencies.uuid]
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
version = "1.0.0"